--- a/test/fixtures/authentications.yml
+++ b/test/fixtures/authentications.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  provider: MyString
-  token: MyString
   user: 
   uid: MyString
+  token: MyString
+  token_secret: MyString
 
 two:
-  provider: MyString
-  token: MyString
   user: 
   uid: MyString
+  token: MyString
+  token_secret: MyString
